--- a/locales/en.json
+++ b/locales/en.json
@@ -7,7 +7,7 @@
   "logo": {
     "my_wit_wallet": "myWitWallet"
   },
-  "title": "Get myWitWallet,{0} your Witnet light wallet.",
+  "title": "Get myWitWallet,{0} your Witnet light wallet",
   "download": "Download myWitWallet for {platform}",
   "source_code": "Check out the source code on {github}"
 }
