ci: enforce change

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,9 +1,9 @@
 {
   "head": {
-    "description": "myWitWallet allows you to send and receive Wit immediately. Bye bye synchronization!",
+    "description": "myWitWallet allows you to send and receive Wit immediately. Bye bye synchronization!!",
     "title": "myWitWallet"
   },
-  "description": "myWitWallet allows you to send and receive Wit immediately. Bye bye synchronization!",
+  "description": "myWitWallet allows you to send and receive Wit immediately. Bye bye synchronization!!",
   "logo": {
     "my_wit_wallet": "myWitWallet"
   },
